<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".history">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@drawable/back"
            android:contentDescription="@string/description" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="88dp"
            android:text="@string/historyHeading"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <ImageButton
            android:id="@+id/setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="85dp"
            android:background="@drawable/setting"
            android:contentDescription="@string/description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/omiconnew"
            android:contentDescription="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/info"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myInfo"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myInfo1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myInfo2"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myInfo3"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myInfo4"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"

                android:text="@string/hobby"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:background="@drawable/musicicon" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:background="@drawable/drawingicon" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:background="@drawable/codeicon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myHobby"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myHobby1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myHobby2"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myContact"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myContact1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myContact2"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/myContact3"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>